--- a/client/index.html
+++ b/client/index.html
@@ -1,11 +1,10 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en" ng-controller="MainCtrl">
 
 <head>
   <meta charset="utf-8" />
   <title>angular-kickstart</title>
-  <meta name="description" content="angular-kickstart - speed up your AngularJS development and testing with a great gulpjs build system.
-">
+  <meta name="description" content="angular-kickstart - speed up your AngularJS development and testing with a great gulpjs build system.">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title ng-bind="title"></title>
@@ -19,6 +18,9 @@
   <link rel="stylesheet" type="text/css" href="src/vendor/pure/grids-responsive.css" />
   <link rel="stylesheet" type="text/css" href="tmp/main.css" />
   <!-- endbuild -->
+  <link rel="stylesheet" href="src/vendor/material-design-lite/material.min.css">
+  <script src="src/vendor/material-design-lite/material.min.js"></script>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
 <body>
@@ -33,15 +35,22 @@
   <script type="text/javascript" src="src/vendor/angular-ui-router/release/angular-ui-router.js"></script>
   <!-- endbuild -->
 
+  <!-- Backand SDK for Angular -->
+  <script src="//cdn.backand.net/backand/dist/1.8.0/backand.min.js"></script>
+
   <!-- build:js assets/js/main.js -->
   <script type="text/javascript" src="src/app/app.js"></script>
 
   <script type="text/javascript" src="src/app/getting-started/getting-started.js"></script>
   <script type="text/javascript" src="src/app/home/home.js"></script>
+  <script type="text/javascript" src="src/app/login/login.js"></script>
 
   <script type="text/javascript" src="src/common/directives/version.js"></script>
   <script type="text/javascript" src="src/common/interceptors/httpInterceptor.js"></script>
+  <script type="text/javascript" src="src/common/services/backandService.js"></script>
   <script type="text/javascript" src="src/common/services/dataService.js"></script>
+  <script type="text/javascript" src="src/common/services/sessionService.js"></script>
+  <script type="text/javascript" src="src/common/services/authResolver.js"></script>
   <script type="text/javascript" src="src/common/filters/uppercase.js"></script>
 
   <script type="text/javascript" src="src/common/header.js"></script>
