--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
   <title ng-bind="title"></title>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="AngularJS, angular-kickstart, gulp, bower, vesparny" />
 
   <!-- build:css assets/css/main.css -->
